add links to website and github

--- a/project-timuryuta.html
+++ b/project-timuryuta.html
@@ -71,7 +71,7 @@
 
           <img
             src="./img/projects/timuryuta-big.jpg"
-            alt="project 6"
+            alt="image TimurYuTA"
             class="project-details__img"
           />
 
@@ -87,9 +87,9 @@
             <p>Technologies used: HTML, CSS, JS</p>
           </div>
 
-          <a href="#!" class="btn-outline"> Website </a>
+          <a href="https://timuryuta.github.io/TimurYuTA-website" target="_blank" class="btn-outline"> Website </a>
 
-          <a href="#!" class="btn-outline">
+          <a href="https://github.com/TimurYuTA/TimurYuTA-website" target="_blank" class="btn-outline">
             <img src="./img/icons/gitHub-black.svg" alt="github" />
             GitHub repo
           </a>
