change Alt of img of projects

--- a/project-myfwp.html
+++ b/project-myfwp.html
@@ -71,7 +71,7 @@
 
           <img
             src="./img/projects/myfwp-big.jpg"
-            alt="project 4"
+            alt="image MyFirstWebPage"
             class="project-details__img"
           />
 
