--- a/project-portfolio.html
+++ b/project-portfolio.html
@@ -71,7 +71,7 @@
 
           <img
             src="./img/projects/portfolio-big.jpg"
-            alt="project 3"
+            alt="image portfolio"
             class="project-details__img"
           />
 
