--- a/project-resume.html
+++ b/project-resume.html
@@ -71,7 +71,7 @@
 
           <img
             src="./img/projects/resume-big.jpg"
-            alt="project 2"
+            alt="image resume"
             class="project-details__img"
           />
 
