--- a/project-tgbot.html
+++ b/project-tgbot.html
@@ -71,7 +71,7 @@
 
           <img
             src="./img/projects/tgbot-big.jpg"
-            alt="project 5"
+            alt="image Telegram Bot"
             class="project-details__img"
           />
 
