--- a/project-trip.html
+++ b/project-trip.html
@@ -71,7 +71,7 @@
 
           <img
             src="./img/projects/trip-big.jpg"
-            alt="project 1"
+            alt="image TripToDagestan"
             class="project-details__img"
           />
 
