--- a/project-trip.html
+++ b/project-trip.html
@@ -117,7 +117,7 @@
             </li>
             <li class="social__item">
               <a href="https://www.linkedin.com/in/timuryuta" target="_blank">
-                <img src="./img/icons/linkedIn.svg" alt="linkedin" />
+                <img src="./img/icons/linkedin.svg" alt="linkedin" />
               </a>
             </li>
           </ul>
