add project  «TimurYuTA» on React

--- a/projects.html
+++ b/projects.html
@@ -115,6 +115,16 @@
               <h2 class="project__title">TimurYuTA</h2>
             </a>
           </li>
+          <li class="project">
+            <a href="./project-timuryutareact.html">
+              <img
+                src="./img/projects/timuryuta.jpg"
+                alt="Project img"
+                class="project__img"
+              />
+              <h2 class="project__title">«TimurYuTA» on React</h2>
+            </a>
+          </li>
         </ul>
       </div>
     </main>
